--- a/.github/workflows/build_rom.yml
+++ b/.github/workflows/build_rom.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Check out Source
         uses: actions/checkout@v2
         with:
+          node-version: 16
           path: pokecrystal-mobile-en
           submodules: false
 
@@ -53,6 +54,7 @@ jobs:
         if: (matrix.name == 'Linux-x64')
         uses: actions/upload-artifact@v2
         with:
+          node-version: 16
           name: Pokecrystal_Build
           path: pokecrystal-mobile-en/pokecrystal.gbc
           # retention-days: 14
